--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Bantha Cleaning</title>
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="offer.css">
     <link rel="icon" type="image/png" href="logontp.png">
     <link rel="shortcut icon" type="image/png" href="logontp.png">
     <link rel="apple-touch-icon" href="logontp.png">
@@ -64,6 +65,53 @@
         <div class="mobile-overlay"></div>
     </header>
 
+    <!-- Popup Modal -->
+    <div class="popup-overlay" id="popupOverlay">
+        <div class="popup-content">
+            <button class="close-btn" id="closeBtn">&times;</button>
+            <div class="offer-image"></div>
+            <h1 class="popup-title">OFFER! OFFER!! OFFER!!!</h1>
+            <h2 class="popup-subtitle">Book Your Cleaning Service</h2>
+            <p class="popup-description">
+                🕒 <strong>LIMITED TIME OFFER</strong> 🕒<br><br>
+                Enjoy an exclusive discount on your first professional cleaning service! Our expert team will make your space sparkle like new. Don’t miss this amazing deal – book now!
+            </p>
+            <button class="cta-button" onclick="bookService()">BOOK NOW</button>
+        </div>
+    </div>
+
+    <script>
+        // Show popup when page loads
+        window.addEventListener('load', function() {
+            setTimeout(function() {
+                document.getElementById('popupOverlay').classList.add('active');
+            }, 500); // Small delay for better user experience
+        });
+
+        // Close popup functionality
+        document.getElementById('closeBtn').addEventListener('click', closePopup);
+        document.getElementById('popupOverlay').addEventListener('click', function(e) {
+            if (e.target === this) {
+                closePopup();
+            }
+        });
+
+        function closePopup() {
+            document.getElementById('popupOverlay').classList.remove('active');
+        }
+
+        function bookService() {
+            window.location.href = 'contact.html';
+        }
+
+        // Close popup with Escape key
+        document.addEventListener('keydown', function(e) {
+            if (e.key === 'Escape') {
+                closePopup();
+            }
+        });
+    </script>
+
         <!-- Company Info & Contact Form Section -->
     <section class="info-contact-section">
         <div class="info-contact-container">
@@ -80,7 +128,7 @@
             <!-- Right Side - Contact Form -->
             <div class="contact-form-container">
                 <h2 class="form-title">Get In Touch</h2>
-                <form class="contact-form" action="https://formspree.io/f/mkgvepzz" method="POST">
+                <form class="contact-form" action="https://formspree.io/f/mandkpgw" method="POST">
                     <!-- Row 1: Full Name and Postal Code -->
                     <div class="form-row">
                         <div class="form-group">
@@ -312,5 +360,4 @@
     </script>
     <script src="header.js"></script>
 </body>
-
 </html>
