--- a/contact.html
+++ b/contact.html
@@ -65,6 +65,48 @@
         <div class="mobile-overlay"></div>
     </header>
 
+    <!-- contact form -->
+    <section class="premium-contact-section">
+        <div class="premium-form-wrapper">
+            <h2 class="premium-section-title">Get In Touch</h2>
+            <p class="premium-section-subtitle">Ready to transform your space? Let's discuss your cleaning needs!</p>
+            
+            <form class="premium-contact-form" action="https://formspree.io/f/mandkpgw" method="POST">
+                <!-- Row 1: Full Name and Postal Code -->
+                <div class="premium-form-row">
+                    <div class="premium-input-group" data-icon="user">
+                        <label for="fullname" class="premium-input-label">Full Name *</label>
+                        <input type="text" id="fullname" name="fullname" class="premium-form-input" required>
+                    </div>
+                    <div class="premium-input-group" data-icon="location">
+                        <label for="postal_code" class="premium-input-label">Postal Code</label>
+                        <input type="text" id="postal_code" name="postal_code" class="premium-form-input">
+                    </div>
+                </div>
+
+                <!-- Row 2: Email and Phone -->
+                <div class="premium-form-row">
+                    <div class="premium-input-group" data-icon="mail">
+                        <label for="email" class="premium-input-label">Email Address *</label>
+                        <input type="email" id="email" name="email" class="premium-form-input" required>
+                    </div>
+                    <div class="premium-input-group" data-icon="phone">
+                        <label for="phone" class="premium-input-label">Phone Number</label>
+                        <input type="tel" id="phone" name="phone" class="premium-form-input">
+                    </div>
+                </div>
+
+                <!-- Message -->
+                <div class="premium-input-group">
+                    <label for="message" class="premium-input-label">Your Message *</label>
+                    <textarea id="message" name="message" class="premium-form-textarea" placeholder="Tell us about your cleaning requirements, preferred schedule, and any special requests..." required></textarea>
+                </div>
+
+                <button type="submit" class="premium-submit-button">Send Message</button>
+            </form>
+        </div>
+    </section>
+
     <!-- Contact Section -->
     <section class="contact-section">
         <div class="contact-container">
