--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bantha Cleaning</title>
+    <title>Bantha Cleaning | Professional Cleaning Service in Aldershot</title>
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="offer.css">
@@ -361,3 +361,4 @@
     <script src="header.js"></script>
 </body>
 </html>
+
