--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/png" href="logontp.png">
     <link rel="shortcut icon" type="image/png" href="logontp.png">
     <link rel="apple-touch-icon" href="logontp.png">
+    <meta name="description" content="Affordable home & office cleaning services in Aldershot, UK. Book now for a spotless space!">
 </head>
 <body>
     <header class="header">
@@ -361,4 +362,5 @@
     <script src="header.js"></script>
 </body>
 </html>
+
 
