--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bantha Cleaning | Professional Cleaning Service in Aldershot</title>
+    <title>Bantha Cleaning</title>
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="offer.css">
     <link rel="icon" type="image/png" href="logontp.png">
     <link rel="shortcut icon" type="image/png" href="logontp.png">
     <link rel="apple-touch-icon" href="logontp.png">
-    <meta name="description" content="Affordable home & office cleaning services in Aldershot, UK. Book now for a spotless space!">
 </head>
 <body>
     <header class="header">
@@ -47,6 +46,10 @@
                         <a href="generalcleaning.html">General Cleaning</a>
                         <a href="deepcleaning.html">Deep Cleaning</a>
                     </div>
+                </div>
+                
+                <div class="nav-item">
+                    <a href="blog.html" class="nav-link">Blog</a>
                 </div>
                 
                 <div class="nav-item">
@@ -281,6 +284,9 @@
                     </div>
                 </div>
                 <div class="menu-item">
+                    <a href="blog.html">Blog</a>
+                </div>
+                <div class="menu-item">
                     <a href="contact.html">Contact</a>
                 </div>
             </div>
@@ -362,5 +368,3 @@
     <script src="header.js"></script>
 </body>
 </html>
-
-
