--- a/blog.html
+++ b/blog.html
@@ -75,16 +75,16 @@
 
 <!-- Header -->
 <div class="section-header">
-    <h1>🧹 Cleaning Tips Blog</h1>
-    <p>Professional cleaning advice and tips for a spotless home</p>
+    <h1>🧹Blog are coming soon!!!</h1>
+<!--     <p>Professional cleaning advice and tips for a spotless home</p> -->
 </div>
 
 <!-- Blog Container -->
-<div class="container-blog">
-    <div class="grid-blog" id="gridBlogPosts">
+<!-- <div class="container-blog">
+    <div class="grid-blog" id="gridBlogPosts"> -->
         <!-- Posts will be loaded here -->
-    </div>
-</div>
+<!--     </div>
+</div> -->
 
 <!-- Modal -->
 <div id="modalPost" class="overlay-modal">
@@ -235,4 +235,5 @@
 </body>
 
 </html>
+
 
