--- a/add-post.html
+++ b/add-post.html
@@ -222,9 +222,9 @@ image3.jpg" rows="4"></textarea>
     <script>
 // GitHub Configuration (same as blog.html)
 const GITHUB_CONFIG = {
-    owner: 'your-username',           // Replace with your GitHub username
-    repo: 'your-repo-name',          // Replace with your repository name
-    token: 'your-github-token',      // Replace with your personal access token
+    owner: 'BishalChaudhary98',           // Replace with your GitHub username
+    repo: 'Bantha-Cleaning',          // Replace with your repository name
+    token: prompt('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'),      // Replace with your personal access token
     branch: 'main'
 };
 
@@ -532,3 +532,4 @@ document.addEventListener('DOMContentLoaded', function() {
 </body>
 
 </html>
+
