--- a/add-post.html
+++ b/add-post.html
@@ -222,8 +222,8 @@ image3.jpg" rows="4"></textarea>
     <script>
 // Secure GitHub Configuration - No token in code!
 const GITHUB_CONFIG = {
-    owner: 'your-username',           // Replace with your actual GitHub username
-    repo: 'your-repo-name',          // Replace with your actual repository name
+    owner: 'BishalChaudhary98',           // Replace with your actual GitHub username
+    repo: 'Bantha-Cleaning',          // Replace with your actual repository name
     token: null,                     // Will be set securely
     branch: 'main'
 };
@@ -586,5 +586,6 @@ document.head.appendChild(style);
 </body>
 
 </html>
+
 
 
