--- a/blog.html
+++ b/blog.html
@@ -80,11 +80,11 @@
 </div>
 
 <!-- Blog Container -->
-<!-- <div class="container-blog">
-    <div class="grid-blog" id="gridBlogPosts"> -->
+<div class="container-blog">
+    <div class="grid-blog" id="gridBlogPosts">
         <!-- Posts will be loaded here -->
-<!--     </div>
-</div> -->
+    </div>
+</div>
 
 <!-- Modal -->
 <div id="modalPost" class="overlay-modal">
@@ -235,5 +235,6 @@
 </body>
 
 </html>
+
 
 
