--- a/blog.html
+++ b/blog.html
@@ -75,8 +75,8 @@
 
 <!-- Header -->
 <div class="section-header">
-    <h1>🧹Blog are coming soon!!!</h1>
-<!--     <p>Professional cleaning advice and tips for a spotless home</p> -->
+    <h1>🧹Bantha Blogs</h1>
+    <p>Professional cleaning service and a spotless home</p>
 </div>
 
 <!-- Blog Container -->
@@ -235,6 +235,7 @@
 </body>
 
 </html>
+
 
 
 
