--- a/blog.html
+++ b/blog.html
@@ -108,19 +108,19 @@
                 <div class="grid-contact">
                     <div class="item-contact">
                         <strong>Email</strong>
-                        <a href="mailto:">your-email@example.com</a>
+                        <a href="mailto:">banthacleaningcompany@gmail.com</a>
                     </div>
                     <div class="item-contact">
                         <strong>Website</strong>
-                        <a href="https://" target="_blank">www.yourwebsite.com</a>
+                        <a href="https://" target="_blank">www.banthacleanig.com</a>
                     </div>
                     <div class="item-contact">
                         <strong>Phone</strong>
-                        <a href="tel:">+1 (555) 123-4567</a>
+                        <a href="tel:">07825183734</a>
                     </div>
                     <div class="item-contact">
                         <strong>Address</strong>
-                        <span>123 Main Street<br>City, State 12345</span>
+                        <span>Victoria Rd<br>Aldershot, UK</span>
                     </div>
                 </div>
             </div>
@@ -235,6 +235,7 @@
 </body>
 
 </html>
+
 
 
 
