--- a/contact.html
+++ b/contact.html
@@ -49,6 +49,10 @@
                 </div>
                 
                 <div class="nav-item">
+                    <a href="blog.html" class="nav-link">Blog</a>
+                </div>
+                
+                <div class="nav-item">
                     <a href="contact.html" class="nav-link">Contact</a>
                 </div>
             </nav>
@@ -216,6 +220,9 @@
                     </div>
                 </div>
                 <div class="menu-item">
+                    <a href="blog.html">Blog</a>
+                </div>
+                <div class="menu-item">
                     <a href="contact.html">Contact</a>
                 </div>
             </div>
@@ -297,3 +304,4 @@
     <script src="header.js"></script>
 </body>
 </html>
+
