--- a/deepcleaning.html
+++ b/deepcleaning.html
@@ -49,6 +49,10 @@
                 </div>
                 
                 <div class="nav-item">
+                    <a href="blog.html" class="nav-link">Blog</a>
+                </div>
+                
+                <div class="nav-item">
                     <a href="contact.html" class="nav-link">Contact</a>
                 </div>
             </nav>
@@ -160,6 +164,9 @@
                     </div>
                 </div>
                 <div class="menu-item">
+                    <a href="blog.html">Blog</a>
+                </div>
+                <div class="menu-item">
                     <a href="contact.html">Contact</a>
                 </div>
             </div>
@@ -242,3 +249,4 @@
 </body>
 
 </html>
+
