--- a/generalcleaning.html
+++ b/generalcleaning.html
@@ -49,6 +49,10 @@
                 </div>
                 
                 <div class="nav-item">
+                    <a href="blog.html" class="nav-link">Blog</a>
+                </div>
+                
+                <div class="nav-item">
                     <a href="contact.html" class="nav-link">Contact</a>
                 </div>
             </nav>
@@ -158,6 +162,9 @@
                     </div>
                 </div>
                 <div class="menu-item">
+                    <a href="blog.html">Blog</a>
+                </div>
+                <div class="menu-item">
                     <a href="contact.html">Contact</a>
                 </div>
             </div>
@@ -238,4 +245,5 @@
     </script>
     <script src="header.js"></script>
 </body>
+
 </html>
