--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bantha Cleaning</title>
+    <title>Professional Cleaning Service in Aldershot | Bantha Cleaning</title>
+    <meta name="description" content="Looking for reliable cleaning services in Aldershot? Our trustworthy team provides top-quality deep cleaning and regular home upkeep. Get in touch for a free quote!">
+    <link rel="canonical" href="https://banthacleaning.com/" />
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="offer.css">
@@ -368,3 +370,4 @@
     <script src="header.js"></script>
 </body>
 </html>
+
