--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Professional Cleaning Service in Aldershot | Bantha Cleaning</title>
     <meta name="description" content="Looking for reliable cleaning services in Aldershot? Our trustworthy team provides top-quality deep cleaning and regular home upkeep. Get in touch for a free quote!">
     <link rel="canonical" href="https://banthacleaning.com/" />
+    <meta http-equiv="refresh" content="0; url=https://banthacleaning.com/" />
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="offer.css">
@@ -370,4 +371,5 @@
     <script src="header.js"></script>
 </body>
 </html>
+
 
