--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="header-container">
             <!-- Logo -->
             <div class="logo-section">
-                <a href="index.html">
+                <a href="/">
                     <img src="logo.png" alt="Company Logo" class="logo" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
                 </a>
                 <div style="display:none; font-weight:bold; font-size:1.2rem; color:#333;">LOGO</div>
@@ -37,7 +37,7 @@
             <!-- Navigation -->
             <nav class="nav-menu">
                 <div class="nav-item">
-                    <a href="index.html" class="nav-link">Home</a>
+                    <a href="/" class="nav-link">Home</a>
                 </div>
                 
                 <div class="nav-item">
@@ -273,7 +273,7 @@
             <div class="footer-column">
                 <h3>Menu</h3>
                 <div class="menu-item">
-                    <a href="index.html">Home</a>
+                    <a href="/">Home</a>
                 </div>
                 <div class="menu-item">
                     <a href="javascript:void(0);" onclick="showHideMenu()">Service</a>
@@ -371,6 +371,7 @@
     <script src="header.js"></script>
 </body>
 </html>
+
 
 
 
