--- a/deepcleaning.html
+++ b/deepcleaning.html
@@ -16,7 +16,7 @@
         <div class="header-container">
             <!-- Logo -->
             <div class="logo-section">
-                <a href="index.html">
+                <a href="/">
                     <img src="logo.png" alt="Company Logo" class="logo" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
                 </a>
                 <div style="display:none; font-weight:bold; font-size:1.2rem; color:#333;">LOGO</div>
@@ -34,7 +34,7 @@
             <!-- Navigation -->
             <nav class="nav-menu">
                 <div class="nav-item">
-                    <a href="index.html" class="nav-link">Home</a>
+                    <a href="/" class="nav-link">Home</a>
                 </div>
                 
                 <div class="nav-item">
@@ -150,7 +150,7 @@
             <div class="footer-column">
                 <h3>Menu</h3>
                 <div class="menu-item">
-                    <a href="index.html">Home</a>
+                    <a href="/">Home</a>
                 </div>
                 <div class="menu-item">
                     <a href="javascript:void(0);" onclick="showHideMenu()">Service</a>
@@ -249,4 +249,5 @@
 </body>
 
 </html>
+
 
