--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bantha Cleaning</title>
+    <meta name="description" content="Looking for reliable cleaning services in Aldershot? Our trustworthy team provides top-quality deep cleaning and regular home upkeep. Get in touch for a free quote!">
+    <meta name="description" content="Looking for reliable cleaning services in Basingstoke? Our trustworthy team provides top-quality deep cleaning and regular home upkeep. Get in touch for a free quote!">
+    <meta name="description" content="Looking for reliable cleaning services in Camberley? Our trustworthy team provides top-quality deep cleaning and regular home upkeep. Get in touch for a free quote!">
+    <meta name="description" content="Looking for reliable cleaning services in Winchester? Our trustworthy team provides top-quality deep cleaning and regular home upkeep. Get in touch for a free quote!">
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="offer.css">
@@ -235,6 +239,7 @@
 </body>
 
 </html>
+
 
 
 
