--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
             <!-- Logo -->
             <div class="logo-section">
                 <a href="/">
-                    <img src="logo.png" alt="Company Logo" class="logo" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                    <img src="logo.png" alt="Bantha Cleaning Logo" class="logo" fetchpriority="high" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
                 </a>
                 <div style="display:none; font-weight:bold; font-size:1.2rem; color:#333;">LOGO</div>
             </div>
@@ -308,6 +308,7 @@
     <script src="header.js"></script>
 </body>
 </html>
+
 
 
 
