--- a/index.html
+++ b/index.html
@@ -228,8 +228,11 @@
                     <div class="service-image"><img src="studio.webp"
                             alt="Studion Cleaning"></div>
                     <h3>Studio Cleaning</h3>
-                    <p>Professional cleaning services specialized for studios,
-                        keeping your creative space spotless and organized.</p>
+                    <p>Commercial Studio & Small Office Cleaning: Bantha
+                        Cleaning offers specialized professional services for
+                        studios and businesses in Aldershot. We focus on keeping
+                        your unique workspace sanitized, organized, and spotless
+                        for maximum productivity.</p>
                 </div>
 
                 <!-- Service 2: Flat Cleaning -->
@@ -237,8 +240,11 @@
                     <div class="service-image"><img src="flatcleaning.webp"
                             alt="Flat Cleaning"></div>
                     <h3>Flat Cleaning</h3>
-                    <p>Expert flat cleaning solutions to maintain a fresh and
-                        healthy living environment.</p>
+                    <p>Reliable Flat & Apartment Cleaning: Expert flat and
+                        apartment cleaning solutions for tenants and landlords
+                        in the Camberley and Farnborough area. Maintain a
+                        healthy, fresh living environment with our trusted,
+                        recurring service.</p>
                 </div>
 
                 <!-- Service 3: House Cleaning -->
@@ -246,8 +252,11 @@
                     <div class="service-image"><img src="housecleaning.webp"
                             alt="House Cleaning"></div>
                     <h3>House Cleaning</h3>
-                    <p>Comprehensive house cleaning services tailored to your
-                        family's needs for a sparkling home.</p>
+                    <p>Top-Rated House & Residential Deep Cleaning:
+                        Comprehensive house cleaning services for families in
+                        Winchester and Basingstoke. We tailor solutions to your
+                        needs, ensuring a sparkling, healthier home every
+                        time.</p>
                 </div>
             </div>
         </section>
