--- a/index.html
+++ b/index.html
@@ -272,12 +272,24 @@
                 <!-- Right: Content -->
                 <div class="about-content">
                     <h2>About Bantha Cleaning Ltd</h2>
-                    <p>At Bantha Cleaning Ltd, we believe cleanliness is not
-                        just about looks—it's about health, peace, and trust.
-                        Our professional team offers reliable cleaning services
-                        tailored for homes, flats, and studios. With modern
-                        tools and a passion for perfection, we make every space
-                        shine.</p>
+                    <p>Bantha Cleaning Ltd is your trusted local provider for
+                        Professional House, Flat, and Commercial Cleaning
+                        Services in the Aldershot, Camberley, Basingstoke, Winchester &
+                        Farnham areas.
+
+                        At Bantha Cleaning, we believe cleanliness is not just
+                        about looks—it's about promoting health, peace of mind,
+                        and establishing customer trust. Our professional,
+                        fully-vetted team delivers reliable deep cleaning and
+                        routine services tailored for homes, apartments, and
+                        commercial studios.
+
+                        We use modern techniques and a passion for perfection to
+                        ensure every space is spotless and healthy. As your
+                        local cleaning partner, we offer flexible scheduling and
+                        transparent pricing. Choose Bantha Cleaning for
+                        dependable, high-quality care that keeps your
+                        environment sparkling.</p>
                 </div>
             </div>
         </section>
