--- a/index.html
+++ b/index.html
@@ -274,7 +274,8 @@
                     <h2>About Bantha Cleaning Ltd</h2>
                     <p>Bantha Cleaning Ltd is your trusted local provider for
                         Professional House, Flat, and Commercial Cleaning
-                        Services in the Aldershot, Camberley, Basingstoke, Winchester &
+                        Services in the Aldershot, Camberley, Basingstoke,
+                        Winchester &
                         Farnham areas.
 
                         At Bantha Cleaning, we believe cleanliness is not just
@@ -322,11 +323,12 @@
         <!-- Service Areas Section -->
         <section class="service-areas-section">
             <div class="areas-container">
-                <h2 class="areas-title">Service Areas We Cover</h2>
-                <p class="areas-description">We proudly offer our professional
-                    cleaning services across a wide range of locations, ensuring
-                    top-quality service within a 60-mile radius of
-                    Aldershot.</p>
+                <h2 class="areas-title">Our Professional Cleaning Service
+                    Areas</h2>
+                <p class="areas-description">Bantha Cleaning proudly offers
+                    trusted, top-quality house and commercial cleaning within a
+                    60-mile radius of Aldershot. We are your local experts
+                    serving all major towns and communities in the area:</p>
 
                 <div class="areas-grid">
                     <div class="area-item">Winchester</div>
@@ -339,10 +341,6 @@
                     <div class="area-item">Hook</div>
                     <div class="area-item">Woking</div>
                     <div class="area-item">Ash Vale</div>
-                </div>
-
-                <div class="more-areas">
-                    + Many More (within 60 miles)
                 </div>
             </div>
         </section>
