--- a/index.html
+++ b/index.html
@@ -321,29 +321,58 @@
         </section>
 
         <!-- Service Areas Section -->
-        <section class="service-areas-section">
-            <div class="areas-container">
-                <h2 class="areas-title">Our Professional Cleaning Service
-                    Areas</h2>
-                <p class="areas-description">Bantha Cleaning proudly offers
-                    trusted, top-quality house and commercial cleaning within a
-                    60-mile radius of Aldershot. We are your local experts
-                    serving all major towns and communities in the area:</p>
+<section class="service-areas-section">
+    <div class="areas-container">
+        <h2 class="areas-title">Our Professional Cleaning Service Areas</h2>
+        <p class="areas-description">Bantha Cleaning proudly offers
+            trusted, top-quality house and commercial cleaning within a
+            60-mile radius of Aldershot. We are your local experts
+            serving all major towns and communities in the area:</p>
 
-                <div class="areas-grid">
-                    <div class="area-item">Winchester</div>
-                    <div class="area-item">Andover</div>
-                    <div class="area-item">Basingstoke</div>
-                    <div class="area-item">Aldershot</div>
-                    <div class="area-item">Fleet</div>
-                    <div class="area-item">Farnborough</div>
-                    <div class="area-item">Farnham</div>
-                    <div class="area-item">Hook</div>
-                    <div class="area-item">Woking</div>
-                    <div class="area-item">Ash Vale</div>
-                </div>
-            </div>
-        </section>
+        <div class="areas-grid">
+            <a href="winchester-service.html" class="area-item">
+                <span class="area-name">Winchester</span>
+                <span class="area-arrow">→</span>
+            </a>
+            <a href="andover-service.html" class="area-item">
+                <span class="area-name">Andover</span>
+                <span class="area-arrow">→</span>
+            </a>
+            <a href="basingstoke-service.html" class="area-item">
+                <span class="area-name">Basingstoke</span>
+                <span class="area-arrow">→</span>
+            </a>
+            <a href="aldershot-service.html" class="area-item">
+                <span class="area-name">Aldershot</span>
+                <span class="area-arrow">→</span>
+            </a>
+            <a href="fleet-service.html" class="area-item">
+                <span class="area-name">Fleet</span>
+                <span class="area-arrow">→</span>
+            </a>
+            <a href="farnborough-service.html" class="area-item">
+                <span class="area-name">Farnborough</span>
+                <span class="area-arrow">→</span>
+            </a>
+            <a href="farnham-service.html" class="area-item">
+                <span class="area-name">Farnham</span>
+                <span class="area-arrow">→</span>
+            </a>
+            <a href="hook-service.html" class="area-item">
+                <span class="area-name">Hook</span>
+                <span class="area-arrow">→</span>
+            </a>
+            <a href="woking-service.html" class="area-item">
+                <span class="area-name">Woking</span>
+                <span class="area-arrow">→</span>
+            </a>
+            <a href="ash-vale-service.html" class="area-item">
+                <span class="area-name">Ash Vale</span>
+                <span class="area-arrow">→</span>
+            </a>
+        </div>
+    </div>
+</section>
 
         <!-- Footer Section -->
         <section class="footer-section">
