--- a/generalcleaning.html
+++ b/generalcleaning.html
@@ -100,8 +100,7 @@
                     cleaning services across Aldershot, Camberley, and
                     Farnborough. Our expert team focuses on maintaining the
                     cleanliness and comfort of your home, covering all essential
-                    areas to keep your space neat and welcoming every week. Get
-                    your home tidy for just £16 per hour!
+                    areas to keep your space neat and welcoming every week.
                 </p>
             </div>
         </section>
