--- a/generalcleaning.html
+++ b/generalcleaning.html
@@ -114,29 +114,25 @@
                 <!-- Information Content -->
                 <div class="info-content">
                     <p>
-                        At <strong>Bantha Cleaning</strong>, our general and
-                        house cleaning services are designed to maintain a
-                        clean, comfortable, and welcoming space for your
-                        everyday life. Whether it's regular upkeep or a
-                        scheduled visit, our experienced team delivers reliable
-                        results using eco-friendly, pet-safe products. Choose
-                        from daily, weekly, fortnightly, or monthly cleaning
-                        options to match your lifestyle and preferences.
+                        At <strong>Bantha Cleaning</strong>, our services are
+                        designed to maintain a clean, comfortable, and welcoming
+                        space for your everyday life. Whether you need regular
+                        weekly upkeep or a scheduled general cleaning visit, our
+                        experienced team delivers reliable results. We offer
+                        flexible options, including daily, weekly, fortnightly,
+                        or monthly cleaning to match your lifestyle.
                     </p>
                     <p>
-                        Our general cleaning covers essential tasks like
-                        dusting, vacuuming, mopping, kitchen and bathroom
-                        surface cleaning, and tidying up high-traffic areas.
-                        From regular home care to occasional refreshers, Bantha
-                        Cleaning offers flexible packages and affordable pricing
-                        to keep your home looking its best.
+                        Our comprehensive service covers all essential tasks
+                        like dusting, vacuuming, mopping, kitchen, and bathroom
+                        surface cleaning.
                     </p>
                     <p>
-                        We also provide commercial cleaning services to ensure
-                        your business environment remains clean, professional,
-                        and inviting. Trust our reliable, background-checked
-                        professionals for consistent, high-quality service you
-                        can depend on.
+                        We also provide dedicated Commercial Cleaning Services
+                        to ensure your business environment remains clean,
+                        professional, and inviting to customers. Trust our
+                        reliable, background-checked professionals for
+                        consistent, high-quality service you can depend on.
                     </p>
                 </div>
 
