--- a/deepcleaning.html
+++ b/deepcleaning.html
@@ -115,14 +115,14 @@
                 <!-- Information Content -->
                 <div class="info-content">
                     <p>
-                        At <strong>Bantha Cleaning</strong>, our deep cleaning
-                        and house cleaning services are tailored to transform
-                        your space into a spotless, refreshed, and inviting
-                        environment. Whether it's a one-time deep clean or
-                        regular upkeep, our experienced team ensures thorough
-                        cleaning using eco-friendly, pet-safe products. Choose
-                        from daily, weekly, fortnightly, or monthly cleaning
-                        options to suit your schedule and lifestyle.
+                        At <strong>Bantha Cleaning</strong>, our Deep Cleaning services are
+                        meticulously tailored to transform your space into a
+                        spotless, refreshed, and inviting environment. Whether
+                        it's a one-time deep clean or reliable weekly upkeep,
+                        our experienced team ensures thorough, high-quality
+                        cleaning using eco-friendly, pet-safe products. We offer
+                        flexible cleaning options, including daily, weekly,
+                        fortnightly, or monthly visits to suit your schedule.
                     </p>
                     <p>
                         Our detailed services go beyond surface cleaning — from
