--- a/deepcleaning.html
+++ b/deepcleaning.html
@@ -115,7 +115,8 @@
                 <!-- Information Content -->
                 <div class="info-content">
                     <p>
-                        At <strong>Bantha Cleaning</strong>, our Deep Cleaning services are
+                        At <strong>Bantha Cleaning</strong>, our Deep Cleaning
+                        services are
                         meticulously tailored to transform your space into a
                         spotless, refreshed, and inviting environment. Whether
                         it's a one-time deep clean or reliable weekly upkeep,
@@ -125,18 +126,19 @@
                         fortnightly, or monthly visits to suit your schedule.
                     </p>
                     <p>
-                        Our detailed services go beyond surface cleaning — from
-                        deep scrubbing, appliance cleaning, and sanitizing
-                        hard-to-reach areas, to move-in/move-out, oven, carpet,
-                        and upholstery cleaning. With flexible packages and
-                        affordable pricing, Bantha Cleaning guarantees a clean,
-                        stress-free environment for you and your family.
+                        Our detailed services go beyond surface cleaning. We
+                        offer comprehensive solutions like deep scrubbing, full
+                        appliance cleaning, sanitizing hard-to-reach areas,
+                        specialized move-in/move-out cleans, and expert oven,
+                        carpet, and upholstery cleaning.
                     </p>
                     <p>
-                        We also offer commercial cleaning solutions, ensuring
-                        both homes and businesses maintain a spotless standard
-                        of cleanliness. Trust our reliable, background-checked
-                        professionals for consistent, high-quality results.
+                        We also provide dedicated Commercial Cleaning Solutions,
+                        ensuring both homes and local businesses maintain a
+                        spotless standard of cleanliness. With flexible packages
+                        and affordable pricing, trust our reliable,
+                        background-checked professionals for consistent,
+                        high-quality results you can depend on.
                     </p>
                 </div>
 
