--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <meta name="description" content="Looking for reliable cleaning services in Aldershot? Our trustworthy team provides top-quality deep cleaning and regular home upkeep. Get in touch for a free quote!">
-    <meta name="description" content="Looking for reliable cleaning services in Basingstoke? Our trustworthy team provides top-quality deep cleaning and regular home upkeep. Get in touch for a free quote!">
-    <meta name="description" content="Looking for reliable cleaning services in Camberley? Our trustworthy team provides top-quality deep cleaning and regular home upkeep. Get in touch for a free quote!">
-    <meta name="description" content="Looking for reliable cleaning services in Winchester? Our trustworthy team provides top-quality deep cleaning and regular home upkeep. Get in touch for a free quote!">
+    <meta name="description"
+            content="Need a cleaning quote fast? Contact Bantha Cleaning, your trusted local cleaner in Aldershot, Basingstoke, Camberley & Winchester. Call or book online now!">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="contact.css">
