--- a/deepcleaning.html
+++ b/deepcleaning.html
@@ -5,13 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Deep Cleaning</title>
         <meta name="description"
-            content="Looking for reliable cleaning services in Aldershot? Our trustworthy team provides top-quality deep cleaning and regular home upkeep. Get in touch for a free quote!">
-        <meta name="description"
-            content="Looking for reliable cleaning services in Basingstoke? Our trustworthy team provides top-quality deep cleaning and regular home upkeep. Get in touch for a free quote!">
-        <meta name="description"
-            content="Looking for reliable cleaning services in Camberley? Our trustworthy team provides top-quality deep cleaning and regular home upkeep. Get in touch for a free quote!">
-        <meta name="description"
-            content="Looking for reliable cleaning services in Winchester? Our trustworthy team provides top-quality deep cleaning and regular home upkeep. Get in touch for a free quote!">
+            content="Looking for trusted local cleaners? We offer deep cleaning & home upkeep in Aldershot, Basingstoke, Camberley & Farnham.">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="header.css">
         <link rel="stylesheet" href="deepcleaning.css">
