--- a/generalcleaning.html
+++ b/generalcleaning.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>General Cleaning</title>
         <meta name="description"
-            content="Looking for trusted local cleaners? We offer deep cleaning & home upkeep in Aldershot, Basingstoke, Camberley & Farnham.">
+            content="Looking for trusted local cleaners? We offer general cleaning & home upkeep in Aldershot, Basingstoke, Camberley & Farnham.">
         <link rel="stylesheet" href="header.css">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="generalcleaning.css">
