--- a/winchester-service.html
+++ b/winchester-service.html
@@ -81,6 +81,67 @@
     <div class="mobile-overlay"></div>
 </header>
 
+<!-- Welcome Section -->
+<section class="welcome-section">
+    <div class="welcome-container">
+        <!-- Main Title -->
+        <h1 class="welcome-title">Welcome to Bantha Cleaning Winchester</h1>
+        
+        <!-- Subtitle -->
+        <h2 class="welcome-subtitle">Your Professional House & Commercial Cleaning Partner in Winchester and Surrounding Areas</h2>
+        
+        <!-- Content Grid -->
+        <div class="welcome-content">
+            <!-- Professionalism & Expertise -->
+            <div class="content-block">
+                <h3 class="block-title">Professionalism & Expertise</h3>
+                <p class="block-text">
+                    <strong>Impeccable Cleaning by Vetted Experts:</strong> Our fully employed team members are professionally trained and comprehensively insured for all House, Flat, and Commercial Cleaning. We are dedicated to upholding the highest standards with each and every visit. Experience a bespoke cleaning service, meticulously tailored to your preferences and needs in Winchester and the surrounding area.
+                </p>
+            </div>
+
+            <!-- 100% Satisfaction Guarantee -->
+            <div class="content-block">
+                <h3 class="block-title">Our 100% Satisfaction Guarantee</h3>
+                <p class="block-text">
+                    <strong>Guaranteed Clean, Guaranteed Trust:</strong> Bantha Cleaning thrives on delivering exceptional customer service and maintaining a truly sparkling home or business. We confidently offer a 100% Satisfaction Guarantee for all our professional cleaning services, ensuring you're delighted after every visit. As your reliable, trusted local partner, your peace of mind is our priority.
+                </p>
+            </div>
+
+            <!-- Serving Winchester and Beyond -->
+            <div class="content-block">
+                <h3 class="block-title">Serving Winchester and Beyond</h3>
+                <p class="block-text">
+                    <strong>Local Experts Serving Hampshire:</strong> Our professional domestic and commercial cleaning services in Winchester extend to Aldershot, Camberley, Farnham, Basingstoke, Andover, and a host of other neighbouring communities within our 60-mile service radius.
+                </p>
+            </div>
+
+            <!-- Commitment to Community -->
+            <div class="content-block">
+                <h3 class="block-title">Commitment to Community</h3>
+                <p class="block-text">
+                    <strong>More Than Clean Homes – Building a Stronger Community:</strong> At Bantha Cleaning, we take pride in not only delivering exceptional cleaning but also in supporting the local communities that we cherish.
+                </p>
+            </div>
+
+            <!-- Your Invitation to a Spotless Space -->
+            <div class="content-block highlight-block">
+                <h3 class="block-title">Your Invitation to a Spotless Space</h3>
+                <p class="block-text">
+                    <strong>Free Estimate for Your Home or Business:</strong> Our commitment starts with a complimentary, no-obligation estimate. Completing our online enquiry form or calling our Winchester office is all it takes. Expect a prompt response from our cleaning team to schedule your visit.
+                </p>
+                <p class="closing-text">
+                    <strong>Elevate your living or workspace with Bantha Cleaning and be proud of your spotless space!</strong>
+                </p>
+                <div class="cta-buttons">
+                    <a href="contact.html" class="cta-btn primary">Get Free Estimate</a>
+                    <a href="tel:+447825183734" class="cta-btn secondary">Call Now</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
     <!-- Footer Section -->
     <section class="footer-section">
         <div class="footer-container">
