--- a/winchester-service.html
+++ b/winchester-service.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="area.css">
     <link rel="icon" type="image/png" href="logontp.png">
     <link rel="shortcut icon" type="image/png" href="logontp.png">
     <link rel="apple-touch-icon" href="logontp.png">
