--- a/winchester-service.html
+++ b/winchester-service.html
@@ -129,7 +129,7 @@
             <div class="content-block highlight-block">
                 <h3 class="block-title">Your Invitation to a Spotless Space</h3>
                 <p class="block-text">
-                    <strong>Free Estimate for Your Home or Business:</strong> Our commitment starts with a complimentary, no-obligation estimate. Completing our online enquiry form or calling our Winchester office is all it takes. Expect a prompt response from our cleaning team to schedule your visit.
+                    <strong>Free Estimate for Your Home or Business:</strong> Our commitment starts with a complimentary, no-obligation estimate. Completing our online enquiry form or calling our office is all it takes. Expect a prompt response from our cleaning team to schedule your visit.
                 </p>
                 <p class="closing-text">
                     <strong>Elevate your living or workspace with Bantha Cleaning and be proud of your spotless space!</strong>
