--- a/winchester-service.html
+++ b/winchester-service.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>House & Commercial Cleaning Services in Winchester</title>
     <meta name="description"
-            content="Need a cleaning quote fast? Contact Bantha Cleaning, your trusted local cleaner in Aldershot, Basingstoke, Camberley & Winchester. Call or book online now!">
+            content="Need a trusted local cleaner in Winchester? Bantha Cleaning offers reliable cleaning and commercial services.">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="contact.css">
