--- a/winchester-service.html
+++ b/winchester-service.html
@@ -125,6 +125,41 @@
                 </p>
             </div>
 
+            <!-- Services Offered -->
+<div class="content-block services-block">
+    <h3 class="block-title">Services Offered</h3>
+    <div class="services-grid">
+        <div class="service-item">
+            <div class="service-icon">🏠</div>
+            <span class="service-name">Standard Light Cleaning</span>
+        </div>
+        <div class="service-item">
+            <div class="service-icon">🚽</div>
+            <span class="service-name">Toilet Cleaning</span>
+        </div>
+        <div class="service-item">
+            <div class="service-icon">🛁</div>
+            <span class="service-name">Bathroom Cleaning</span>
+        </div>
+        <div class="service-item">
+            <div class="service-icon">🔌</div>
+            <span class="service-name">Vacuuming</span>
+        </div>
+        <div class="service-item">
+            <div class="service-icon">✨</div>
+            <span class="service-name">Dusting</span>
+        </div>
+        <div class="service-item">
+            <div class="service-icon">🧽</div>
+            <span class="service-name">Mopping</span>
+        </div>
+        <div class="service-item">
+            <div class="service-icon">🧹</div>
+            <span class="service-name">Sweeping</span>
+        </div>
+    </div>
+</div>
+
             <!-- Your Invitation to a Spotless Space -->
             <div class="content-block highlight-block">
                 <h3 class="block-title">Your Invitation to a Spotless Space</h3>
